--- a/RestSharpNunit.csproj
+++ b/RestSharpNunit.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
@@ -16,10 +17,6 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="RestSharp" Version="108.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="JSON\SerializeJSONBody\" />
   </ItemGroup>
 
 </Project>
